# zeroguess

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  architecture.md  benchmarks.md  index.md  plumbing.md  prd.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tests.md  todo.md
.github/workflows/: benchmarks.yml  docs.yml  lint.yml  release.yml  security.yml  test.yml
examples/: README.md  architecture_selection_example.py  cnn_architecture_test.py  cnn_simple_test.py  functions_example.py  gaussian_example.py  quickstart_double_gaussian.py  quickstart_gaussian.py  quickstart_wavelet.py  run_benchmark_1.py  wavelet_example.py  wavelet_nnae_example.py
scripts/: README.md  build.py  check_all.py  check_deps.py  quality.py  security_check.py  setup_hooks.py
tests/: README.md  cleanup_visualizations.py  conftest.py  test_lmfit_integration.py  test_utils.py
tests/edge_case/: test_learning_failure.py
tests/end_to_end/: test_cnn_multi_peak_gaussian_workflow.py  test_double_gaussian_workflow.py  test_gaussian_workflow.py  test_multi_peak_gaussian_workflow.py  test_multimodal_workflow.py  test_sigmoid_workflow.py  test_utils.py
tests/integration/: test_lmfit_integration.py  test_scipy_integration.py
tests/quickstart/: test_lmfit.py  test_scipy.py
tests/unit/: test_architectures.py  test_base_estimator.py  test_data_generation.py  test_nn_estimator.py
zeroguess/: __init__.py
zeroguess/data/: generators.py
zeroguess/estimators/: architecture_nnae.md  base.py  factory.py  nn_estimator.py  nnae_estimator.py
zeroguess/functions/: README.md  __init__.py  base.py  standard.py  utils.py
zeroguess/integration/: __init__.py  lmfit_adapter.py  scipy_adapter.py
zeroguess/utils/: visualization.py
(+24 files in other folders)
