[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
exclude = [".git", "__pycache__", "build", "dist", ".eggs", "*.egg-info"]
per-file-ignores = """
    __init__.py: F401
    tests/*: D
"""
max-complexity = 10
docstring-convention = "google"
import-order-style = "google"
application-import-names = ["zeroguess"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["zeroguess"]
known_third_party = ["numpy", "scipy", "torch", "matplotlib", "tqdm", "lmfit", "pytest"]

[tool.autopep8]
max_line_length = 120
aggressive = 2
in-place = true
exclude = [".git", "__pycache__", "build", "dist", ".eggs", "*.egg-info"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tqdm.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lmfit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true 